--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -9,15 +9,15 @@ body:
   - type: markdown
     attributes:
       value: |
-        <!-- Thank you for reporting the bug! Please provide as many details as possible for reproduction and fixing. -->
-        
+        <!-- Thank you for reporting a bug! Please provide as much detail as possible. -->
+
   - type: checkboxes
     id: preliminary-checks
     attributes:
       label: "**Preliminary Checks**"
       options:
         - label: "I have searched the existing [issues](https://github.com/Vadim-Khristenko/tlbas/issues) and this bug hasn't been reported yet."
-        - label: "I am using the latest version of TLBAS (or specified the version I'm using below)."
+        - label: "I am using the latest version of TLBAS (or specified the version below)."
         - label: "I have tried to reproduce the bug with minimal configuration/code (if applicable)."
 
   - type: input
@@ -34,37 +34,33 @@ body:
       label: "🔎 Detailed Description"
       description: "Provide a clear and concise description of exactly what the bug is."
       placeholder: "Bug description."
-      required: true
 
   - type: textarea
     id: steps-to-reproduce
     attributes:
       label: "📝 Steps To Reproduce"
       description: |
-        Provide precise steps to reproduce the behavior.  
-        Example:  
-        1. Go to '...'  
-        2. Click on '...'  
+        Provide precise steps to reproduce the behavior.
+        Example:
+        1. Go to '...'
+        2. Click on '...'
         3. See error '...'
       placeholder: |
-        1. Step 1  
-        2. Step 2  
+        1. Step 1
+        2. Step 2
         3. Step 3
-      required: true
 
   - type: textarea
     id: expected-behavior
     attributes:
       label: "🤔 Expected Behavior"
       placeholder: "Describe what you expected to happen."
-      required: true
 
   - type: textarea
     id: actual-behavior
     attributes:
       label: "😲 Actual Behavior"
       placeholder: "Describe what actually happened."
-      required: true
 
   - type: textarea
     id: minimal-reproducible-example
@@ -75,7 +71,6 @@ body:
         ```cpp
         // your code here
         ```
-      required: false
 
   - type: textarea
     id: logs
@@ -85,7 +80,6 @@ body:
         ```text
         Paste logs or stack traces here
         ```
-      required: false
 
   - type: textarea
     id: environment
@@ -93,14 +87,13 @@ body:
       label: "💻 Environment"
       description: "Please complete the following information:"
       placeholder: |
-        **TLBAS Version/Commit:**  
-        **Operating System:**  
-        **Architecture:**  
-        **Compiler/Interpreter/Runtime:**  
-        **Build Configuration:**  
-        **Relevant Dependencies:**  
-        **Other Relevant Info:**  
-      required: true
+        **TLBAS Version/Commit:**
+        **Operating System:**
+        **Architecture:**
+        **Compiler/Interpreter/Runtime:**
+        **Build Configuration:**
+        **Relevant Dependencies:**
+        **Other Relevant Info:**
 
   - type: dropdown
     id: severity
@@ -112,11 +105,9 @@ body:
         - Major
         - Minor
         - Trivial
-      required: false
 
   - type: textarea
     id: additional-context
     attributes:
       label: "📚 Additional Context (Optional)"
       placeholder: "Add any other relevant context here."
-      required: false
