--- a/.github/ISSUE_TEMPLATE/documentation_missed.yaml
+++ b/.github/ISSUE_TEMPLATE/documentation_missed.yaml
@@ -14,7 +14,7 @@ body:
   - type: checkboxes
     id: preliminary-checks
     attributes:
-      label: "**Preliminary Checks**"
+      label: "Preliminary Checks"
       options:
         - label: "I have searched the existing [TLBAS documentation](https://tlbas.vai-prog.ru/docs) and couldn't find the information."
           required: true
